2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Handle unicode in string values of aggregation results..

2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Make the DBException error message for unknown column even less confusing and translate it to English..

2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Allow aggregation functions MIN and MAX also on string and date/time columns..

2009-07-21  Pavel Hanak  <hanak@wpb.cz>

	* lib/pytis/data/postgresql.py:
	Report column and table name in DBException dialog for unknown column type..

2009-07-21  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	One more fix of the last commit (browse form links)..

2009-07-21  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Fixed invalid syntax in the previous commit..

2009-07-21  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Pass hidden field values also to browse form control links..

2009-07-20  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Allow key search also in web forms without paging limit..

2009-07-20  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/util/util.py:
	Print attribute values, not their accessors, in Structure.__str__.

2009-07-17  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Allow overriding duplicit menu order check for more complicated menu structures..

2009-07-17  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Omit the edited record when checking for duplicit order..

2009-07-16  Pavel Hanak  <hanak@wpb.cz>

	* lib/pytis/cms/web.py:
	PYTIS CMS: Added possibility to authenticate against LDAP style passwords..

2009-07-16  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Fixed check for duplicit order at the same level..

2009-07-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/postgresql.py: