@@ -1,5 +1,10 @@
 2009-07-28  Tomas Cerha  <cerha@brailcom.org>
 
+	* lib/pytis/form/list.py:
+	Show MIN/MAX aggregation results also for date/time and string columns..
+
+2009-07-28  Tomas Cerha  <cerha@brailcom.org>
+
 	* lib/pytis/data/postgresql.py:
 	Handle unicode in string values of aggregation results..
 
